[package]
name = "beku"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
minijinja = { version = "0.26", features = ["source"] }
tera = "1"
itertools = "0.10"
anyhow = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }